<resources>
    <string name="app_name">Sorveteria Tio Sans</string>
    <string name="mensagem_inicial">Faça seu login</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_adicionar">Adicionar</string>
    <string name="action_config">configurar</string>
    <string name="action_sair">Sair</string>
    <string name="chocolate">Chocolate</string>
    <string name="morango">Morango</string>
    <string name="creme">Creme</string>
    <string name="nav_sabores">Sabores</string>
    <string name="nav_forum">Forum</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_mensagem">Mensagem</string>
    <string name="nav_localizacao">Localização</string>
    <string name="nav_configuracao">Configuração</string>
    <string name="nav_abrir">Abrir</string>
    <string name="nav_fechar">Fechar</string>
    <string name="nav_sair">Sair</string>
    <string name="action_nova">Novo Sabor</string>

    <string name="API_KEY">AIzaSyBm9xZz7rCgtP0xmx5I3FKci-0mP9cBBro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>