<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sabores"
            android:icon="@drawable/ic_sabores_black"
            android:title="@string/nav_sabores"
            android:checked="true"
            />

        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/ic_forum_black"
            android:title="@string/nav_forum"
            />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black"
            android:title="@string/nav_mensagem"
            />

        <item
            android:id="@+id/nav_localizacao"
            android:icon="@drawable/ic_local_black"
            android:title="@string/nav_localizacao"
            />

        <item
            android:id="@+id/nav_configuracao"
            android:title="@string/nav_sair"
            />

    </group>

</menu>